Added CRU of the crud operations for sets
